[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyan"
version = "1.1.4"
description = "Cyan. A high-level, functional programming language with syntax focused on readability"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["python", "cyan", "programming-language"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/was07/cyan"
"Repository" = "https://github.com/was07/cyan"
